# intrinsic_sdks

./: CMakeLists.txt  intrinsic_sdks-extras.cmake.in  package.xml
cmake/: generate_manifest.sh
intrinsic/icon/release/: file_helpers.h
