<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>intrinsic_sdks</name>
  <version>0.0.0</version>
  <description>
    ROS Wrapper for the Intrinsic SDKs
  </description>

  <maintainer email="mjcarroll@intrinsc.ai">Michael Carroll</maintainer>

  <license>Apache License 2.0</license>

  <author email="mjcarroll@intrinsic.ai">Michael Carroll</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>grpc_vendor</depend>
  <depend>eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
